# archivedive

./: .gitignore  CHANGELOG.md  README.md  SEARCH_SYNTAX.md  pyproject.toml
ga_archivedive/: __init__.py  api.py  app.py  models.py  query.py
ga_archivedive/screens/: art_select.py  help.py  related.py  search.py
ga_archivedive/widgets/: card_panel.py  card_table.py
tests/: test_api_client.py  test_cache.py  test_models.py  test_query.py
