[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ga-archivedive"
version = "0.1.0"
description = "A Scryfall-like TUI card browser for Grand Archive TCG"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.80.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "platformdirs>=4.0",
]

[project.scripts]
archivedive = "ga_archivedive.app:main"

[tool.hatch.build.targets.wheel]
packages = ["ga_archivedive"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
