[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "archivedive"
version = "0.1.0"
description = "A Scryfall-like TUI card browser for Grand Archive TCG"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Thi Dinh", email = "vietthidinh2001@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "textual>=8.2.7",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "platformdirs>=4.0",
]

[project.urls]
Homepage = "https://github.com/ThiDinh21/archivedive"
Repository = "https://github.com/ThiDinh21/archivedive"

[project.scripts]
archivedive = "ga_archivedive.app:main"

[tool.hatch.build.targets.wheel]
packages = ["ga_archivedive"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
